# verdant_chat

./: .env  Cargo.toml  README.md
migrations/2023-05-29-063203_rooms/: up.sql
migrations/2023-05-29-063213_users/: up.sql
migrations/2023-05-29-063220_messages/: up.sql
src/: api.rs  main.rs  models.rs  query.rs  schema.rs  server.rs  session.rs
static/: chatroom.html  index.html  rigister.html
