[package]
name = "verdant_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.5"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-protobuf = "0.9"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-test = "0.1"
actix-tls = "3"
actix-utils = "3"
actix-web = "4.3"
actix-web-actors = "4.1"
actix-web-lab = "0.19"
actix-ws = "0.2.5"
awc = "3"

log = "0.4"
rand = "0.8"
bson = "1.0.0"
chrono = "0.4.11"
futures = "0.3.5"
rustc-serialize = "0.3.24"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
